tests/valid/definite/Function_Valid_3.whiley
define int where $ >= 0 as fr3nat

void f(int x):
    print str(x)

void System::main([string] args):
    fr3nat y
    y = 1
    f(y)
